docs-archive/apache-airflow-providers-fab/3.1.0/_sources/_api/airflow/providers/fab/auth_manager/api_fastapi/routes/roles/index.rst.txt
airflow.providers.fab.auth_manager.api_fastapi.routes.roles
===========================================================

.. py:module:: airflow.providers.fab.auth_manager.api_fastapi.routes.roles


Attributes
----------

.. autoapisummary::

   airflow.providers.fab.auth_manager.api_fastapi.routes.roles.roles_router


Functions
---------

.. autoapisummary::

   airflow.providers.fab.auth_manager.api_fastapi.routes.roles.create_role
   airflow.providers.fab.auth_manager.api_fastapi.routes.roles.get_roles
   airflow.providers.fab.auth_manager.api_fastapi.routes.roles.delete_role
   airflow.providers.fab.auth_manager.api_fastapi.routes.roles.get_role
   airflow.providers.fab.auth_manager.api_fastapi.routes.roles.patch_role


Module Contents
---------------

.. py:data:: roles_router

.. py:function:: create_role(body)

   Create a new role (actions can be empty).


.. py:function:: get_roles(order_by = Query('name', description="Field to order by. Prefix with '-' for descending."), limit = Depends(get_effective_limit()), offset = Query(0, ge=0, description='Number of items to skip before starting to collect results.'))

   List roles with pagination and ordering.


.. py:function:: delete_role(name = Path(..., min_length=1))

   Delete an existing role.


.. py:function:: get_role(name = Path(..., min_length=1))

   Get an existing role.


.. py:function:: patch_role(body, name = Path(..., min_length=1), update_mask = Query(None, description='Comma-separated list of fields to update'))

   Update an existing role.


